--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,8 +117,8 @@ nav:
         - Log-Space Mining: dev/protocol/nipopow/logspace.md
         - Sidechains: dev/protocol/nipopow/nipopow-sidechains.md
       - Privacy: dev/protocol/zkp.md
-      - Storage Rent: mining/rent.md
-      - Autolykos: mining/autolykos.md
+      - Storage Rent: dev/protocol/storage-rent.md
+      - Autolykos: dev/protocol/autolykos.md
     - Scaling: dev/protocol/scaling.md
     - Documents: 
       - documents.md
@@ -166,9 +166,71 @@ nav:
 
   - Developers: 
     - dev/start.md
-    - Getting Started: 
+    - Anatomy of Ergo:
+      - Box: 
+        - dev/data-model/box.md
+        - Box Modelling: dev/data-model/box/box_modeling.md
+      - Registers: dev/data-model/box/registers.md
+      - Tokens:
+        - Create a token: dev/tokens/issue.md
+        - Burning a token: dev/tokens/burn.md
+        - NFTs:
+          - NFTs: dev/tokens/nfts/index.md
+          - Create a NFT: dev/tokens/nfts/create.md
+          - Royalties: dev/tokens/nfts/royalties.md
+        - Standards:
+          - Asset Standard: dev/tokens/standards/eip4.md
+          - Geniune Token Verification: dev/tokens/standards/eip21.md
+          - Auction Contract: dev/tokens/standards/eip22.md
+          - Artwork Contract: dev/tokens/standards/eip24.md
+      - Addresses: 
+        - dev/wallet/address.md
+        - Address Encoding: assets/py/Ergo_Address_Encoding.ipynb
+      - Transactions: 
+        - dev/protocol/transactions.md
+        - Model Transaction: dev/protocol/tx/model-tx.md
+        - Composing Transactions:
+          - dev/protocol/tx/composing.md
+          - Sending A Chained Transaction: dev/anatomy/transactions/chained.md
+          - Frameworks: 
+            - ErgoPay:
+              - ErgoPay: dev/wallet/payments/ergopay/ergo-pay.md
+              - Tutorial: dev/wallet/payments/ergopay/ep-tutorial.md
+            - dApp Connector: dev/wallet/payments/dApp.md
+            - Proxy Contracts:
+              - dev/wallet/payments/proxy.md
+              - Assembler: dev/stack/assembler.md
+          - Manually: 
+            - Format: dev/protocol/tx/format.md
+            - Merkle Tree: dev/protocol/tx/tx-merkle.md
+            - Signing: dev/protocol/tx/signing.md
+            - Validation: dev/protocol/tx/validation.md
+            - Data Inputs: dev/protocol/tx/read-only-inputs.md
+            - Fees: dev/protocol/tx/min-fee.md
+        - Standards:
+          - Babel Fees: dev/protocol/tx/babel-fees.md
+          - Proxy Contracts: dev/wallet/payments/standards/eip17.md
+          - ErgoPay Protocol: dev/wallet/payments/standards/eip20.md
+          - Payment Request URI: dev/wallet/payments/standards/eip25.md
+        - ErgoTool: dev/stack/ergotool.md
+
+      - Block: dev/data-model/block.md
+      - Wallets:
+        - dev/wallets.md
+        - MultiSig: 
+          - dev/wallet/multisig.md
+          - Minotaur: dev/wallet/minotaur-multisig.md
+        - Ledger: dev/wallet/payments/ledger.md
+        - Integration: dev/Integration/guide.md
+        - Standards:
+          - UTXO-Set Scanning Wallet API: dev/wallet/standards/eip1.md
+          - Deterministic Wallet Standard: dev/wallet/standards/eip3.md
+          - Cold Wallet: dev/wallet/standards/eip19.md
+      #- UTXO-State: 
+    
+    - Development Stack: 
       - dev/start.md
-      - Basics: dev/stack/basics.md
+      - Starter Tutorial: dev/stack/basics.md
       - Server: dev/stack/server.md
       - Browser: dev/stack/browser.md
       - Desktop: dev/stack/desktop.md
@@ -281,7 +343,7 @@ nav:
         
         
       - Libaries:
-        - dev/stack/libraries.md
+        - dev/libraries.md
         - GetBlok Plasma: dev/lib/plasma.md
         - Scrypto: dev/lib/scrypto.md
         - EIP12-Types: dev/lib/eip12-types.md
@@ -291,67 +353,6 @@ nav:
         - sigmastate-interpreter: dev/scs/sigmastate-interpreter.md
         - SigmaRust: dev/stack/sigma-rust.md
       #- Bookmarks: dev/start/resources.md
-    - Anatomy of Ergo:
-      - Box: 
-        - dev/data-model/box.md
-        - Box Modelling: dev/data-model/box/box_modeling.md
-      - Registers: dev/data-model/box/registers.md
-      - Tokens:
-        - Create a token: dev/tokens/issue.md
-        - Burning a token: dev/tokens/burn.md
-        - NFTs:
-          - NFTs: dev/tokens/nfts/index.md
-          - Create a NFT: dev/tokens/nfts/create.md
-          - Royalties: dev/tokens/nfts/royalties.md
-        - Standards:
-          - Asset Standard: dev/tokens/standards/eip4.md
-          - Geniune Token Verification: dev/tokens/standards/eip21.md
-          - Auction Contract: dev/tokens/standards/eip22.md
-          - Artwork Contract: dev/tokens/standards/eip24.md
-      - Addresses: 
-        - dev/wallet/address.md
-        - Address Encoding: assets/py/Ergo_Address_Encoding.ipynb
-      - Transactions: 
-        - dev/protocol/transactions.md
-        - Model Transaction: dev/protocol/tx/model-tx.md
-        - Composing Transactions:
-          - dev/protocol/tx/composing.md
-          - Sending A Chained Transaction: dev/anatomy/transactions/chained.md
-          - Frameworks: 
-            - ErgoPay:
-              - ErgoPay: dev/wallet/payments/ergopay/ergo-pay.md
-              - Tutorial: dev/wallet/payments/ergopay/ep-tutorial.md
-            - dApp Connector: dev/wallet/payments/dApp.md
-            - Proxy Contracts:
-              - dev/wallet/payments/proxy.md
-              - Assembler: dev/stack/assembler.md
-          - Manually: 
-            - Format: dev/protocol/tx/format.md
-            - Merkle Tree: dev/protocol/tx/tx-merkle.md
-            - Signing: dev/protocol/tx/signing.md
-            - Validation: dev/protocol/tx/validation.md
-            - Data Inputs: dev/protocol/tx/read-only-inputs.md
-            - Fees: dev/protocol/tx/min-fee.md
-        - Standards:
-          - Babel Fees: dev/protocol/tx/babel-fees.md
-          - Proxy Contracts: dev/wallet/payments/standards/eip17.md
-          - ErgoPay Protocol: dev/wallet/payments/standards/eip20.md
-          - Payment Request URI: dev/wallet/payments/standards/eip25.md
-        - ErgoTool: dev/stack/ergotool.md
-
-      - Block: dev/data-model/block.md
-      - Wallets:
-        - dev/wallets.md
-        - MultiSig: 
-          - dev/wallet/multisig.md
-          - Minotaur: dev/wallet/minotaur-multisig.md
-        - Ledger: dev/wallet/payments/ledger.md
-        - Integration: dev/Integration/guide.md
-        - Standards:
-          - UTXO-Set Scanning Wallet API: dev/wallet/standards/eip1.md
-          - Deterministic Wallet Standard: dev/wallet/standards/eip3.md
-          - Cold Wallet: dev/wallet/standards/eip19.md
-      #- UTXO-State: 
     - Smart Contracts:
       - Smart Contracts: dev/scs/index.md
       - ErgoScript: 
@@ -391,25 +392,24 @@ nav:
 
       - Multi-Stage Contracts: 
         - dev/scs/multi.md
-        - Transactions:
-          - Transaction Chains: dev/scs/tx/tx-chains.md
-          - Transaction Trees: dev/scs/tx/tx-tree.md
-          - Transaction Graphs: dev/scs/tx/tx-graphs.md
+        - Transaction Chains: dev/scs/tx/tx-chains.md
+        - Transaction Trees: dev/scs/tx/tx-tree.md
+        - Transaction Graphs: dev/scs/tx/tx-graphs.md
       #- Data Inputs: dev/scs/data-inputs.md
        
-    - Cryptographic: 
-            - crypto.md
-            - Sigma Protocols: 
-              - dev/scs/sigma.md
-              - Schnorr: 
-                - dev/scs/sigma/schnorr.md
-                - Verifying Schnorr Signatures: dev/scs/sigma/verifying.md
-              - Diffie: 
-                - dev/scs/sigma/diffie.md
-                - ZeroJoin: dev/crypto/zerojoin.md
-            - Ring Signatures:
-              - 3-out-of-5 Threshold Signature: dev/scs/sigma/3-out-of-5.md
-              - Distributed Signatures: node/sigs.md
+      - Cryptographic: 
+              - crypto.md
+              - Sigma Protocols: 
+                - dev/scs/sigma.md
+                - Schnorr: 
+                  - dev/scs/sigma/schnorr.md
+                  - Verifying Schnorr Signatures: dev/scs/sigma/verifying.md
+                - Diffie: 
+                  - dev/scs/sigma/diffie.md
+                  - ZeroJoin: dev/crypto/zerojoin.md
+              - Ring Signatures:
+                - 3-out-of-5 Threshold Signature: dev/scs/sigma/3-out-of-5.md
+                - Distributed Signatures: node/sigs.md
           
     - Resources: dev/stack/introduction.md
 
